refactor: remove unused variable and for repeatitive to common constand